create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2888,11 +2888,11 @@ a {
   }
 }
 .cid-t2Lew4Joph {
-  background-image: url("../../../assets/images/background6.jpg");
+  background-image: url("../../../assets/images/ismail-salad-osman-hajji-dirir-v7ft5ngiefa-unsplash-1920x1280.jpg");
   background-position: 80% 20%;
 }
 .cid-t2Lew4Joph H2 {
-  color: #d58f76;
+  color: #55b4d4;
 }
 .cid-t2Lew4Joph .box {
   background: #200960;
@@ -2933,6 +2933,47 @@ a {
   width: auto;
   margin-left: auto;
   margin-right: auto;
+}
+.cid-t2Lfvapyoe {
+  padding-top: 105px;
+  padding-bottom: 105px;
+  background-color: #ffffff;
+}
+@media (min-width: 1500px) {
+  .cid-t2Lfvapyoe .container {
+    max-width: 1400px;
+  }
+}
+.cid-t2Lfvapyoe img {
+  width: 80%;
+  height: auto;
+  margin: auto;
+}
+.cid-t2Lfvapyoe .content {
+  margin: auto;
+}
+.cid-t2Lfvapyoe .mbr-text,
+.cid-t2Lfvapyoe .mbr-section-btn {
+  color: #999999;
+}
+@media (max-width: 1200px) {
+  .cid-t2Lfvapyoe img {
+    width: 100%;
+  }
+}
+@media (max-width: 992px) {
+  .cid-t2Lfvapyoe .img-col {
+    padding-bottom: 2rem;
+  }
+}
+.cid-t2Lfvapyoe .quote {
+  color: #200960;
+}
+.cid-t2Lfvapyoe H3 {
+  color: #200960;
+}
+.cid-t2Lfvapyoe H4 {
+  color: #200960;
 }
 .cid-t2LeXhUyyZ {
   padding-top: 75px;
@@ -2988,7 +3029,7 @@ a {
 .cid-t2Lf3AE0iA {
   padding-top: 180px;
   padding-bottom: 180px;
-  background-image: url("../../../assets/images/background4.jpg");
+  background-image: url("../../../assets/images/ismail-salad-osman-hajji-dirir-v7ft5ngiefa-unsplash-1920x1280.jpg");
 }
 .cid-t2Lf3AE0iA .card-wrapper {
   display: flex;
@@ -3040,48 +3081,7 @@ a {
   }
 }
 .cid-t2Lf3AE0iA H3 {
-  color: #d58f76;
-}
-.cid-t2Lfvapyoe {
-  padding-top: 105px;
-  padding-bottom: 105px;
-  background-color: #ffffff;
-}
-@media (min-width: 1500px) {
-  .cid-t2Lfvapyoe .container {
-    max-width: 1400px;
-  }
-}
-.cid-t2Lfvapyoe img {
-  width: 80%;
-  height: auto;
-  margin: auto;
-}
-.cid-t2Lfvapyoe .content {
-  margin: auto;
-}
-.cid-t2Lfvapyoe .mbr-text,
-.cid-t2Lfvapyoe .mbr-section-btn {
-  color: #999999;
-}
-@media (max-width: 1200px) {
-  .cid-t2Lfvapyoe img {
-    width: 100%;
-  }
-}
-@media (max-width: 992px) {
-  .cid-t2Lfvapyoe .img-col {
-    padding-bottom: 2rem;
-  }
-}
-.cid-t2Lfvapyoe .quote {
-  color: #200960;
-}
-.cid-t2Lfvapyoe H3 {
-  color: #200960;
-}
-.cid-t2Lfvapyoe H4 {
-  color: #d58f76;
+  color: #55b4d4;
 }
 .cid-t2LfApKzVc {
   padding-top: 45px;
